2008-10-07  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcheckboxgroup.R: Fixed handler code in gcheckboxgroup to
	return a vector of IDS, implemented remove, block, unblock

2008-09-23  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdroplist.R: made wider in windows if small

2008-09-19  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/glabel.R (as.gWidgetsRGtk2.GtkLabel): svalue<- will coerce
	strings with length 2 or greater to single string pasted with "\n"

2008-09-14  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gframe.R (as.gWidgetsRGtk2.GtkFrame): fixed methods for
	svalue, names, names<-

	* R/gexpandgroup.R (as.gWidgetsRGtk2.GtkExpander): fixed up
	svalue method

	* R/glayout.R (as.gWidgetsRGtk2.GtkTable): Work on anchor argument

2008-09-12  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtkStuff.R (setXYalign): rewrote to test class of object,
	not  use try()

	* R/aaaGenerics.R: fixes to defaultWidget<-; 

	* R/gdialogs.R: fixed processing of response in dialog -- was
	issue when closing out via window manager. Added focus to
	input box in ginput.

2008-09-11  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gedit.R (.setCompletion): make key-release-event -- not
	key-press-event for keystroke handler

	* R/ggrid.R: put in doSort=FALSE so that visible<- works
	except when sorting is explicitly called

2008-09-02  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggroup.R (as.gWidgetsRGtk2.GtkVBox <-
	as.gWidgetsRGtk2.GtkHBox): set default for alignment to be
	RGtk2 default so no setXYalign call if not requested. (Thanks Felix)

	* R/gedit.R (.setCompletion): added this function -- if
	completion is set via [<-, then this gets added otherwise
	not. Should speed things up. (Thanks Felix)

2008-08-26  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtkStuff.R: no speed up to gtktry? This is slow, but
	changes didn't make a difference.
