@@ -1,5 +1,5 @@
 Package: gWidgetsRGtk2
-Version: 0.0-44
+Version: 0.0-45
 Title: Toolkit implementation of gWidgets for RGtk2
 Author: Michael Lawrence, John Verzani
 Maintainer: John Verzani <gwidgetsrgtk@gmail.com>
@@ -11,4 +11,4 @@ Description: Port of gWidgets API to RGtk2
 License: GPL (>= 2)
 URL: http://www.math.csi.cuny.edu/pmg
 LazyLoad: yes
-Packaged: Sun Oct 12 23:29:38 2008; verzani
+Packaged: Mon Oct 13 09:33:08 2008; verzani
